--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="app.css" />
   </head>
   <body>
-    <h1>2st Gen Pokedex</h1>
+    <h1>1st Gen Pokedex</h1>
+    <ol id="pokedex">
+
+    </ol>
     <script src="app.js"></script>
   </body>
 </html>
