Styling and Cards Done

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-US-Compatible" content="ie=edge" />
     <title>1st Gen Pokedex</title>
     <link rel="stylesheet" href="app.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>1st Gen Pokedex</h1>
-    <ol id="pokedex">
-
-    </ol>
-    <script src="app.js"></script>
+    <div class="container">
+        <h1>1st Generation Pokedex</h1>
+        <ol id="pokedex"></ol>
+    </div>
+        <script src="app.js"></script>
   </body>
 </html>
